--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ python:
 services:
   - docker
 
-before_script: pip install docker-compose
+before_script:
+  - pip install docker-compose
+  - docker build -t django-rest-app:1.0.0 .
 
 script:
   - docker-compose run app sh -c "python manage.py test && flake8"
