--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ python:
 services:
   - docker
 
+before_install:
+  - echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin
+
 before_script:
   - pip install docker-compose
   - docker build -t django-rest-app:1.0.0 .
